tests/assembler/fail/label_hex.tal
|0100
@cafe
    #12
